#278 Improve the development environment setup procedure